--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flappy bird</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div id="game">
-        <div id="block"></div>
-        <div id="hole"></div>
-        <div id="character" ><img src="img/bird.png" alt="" height="20px" class="bird "></div>   
+<body class="h-screen bg-slate-600/25">
+  <section class="main ">
+    <div id="game" class="rounded-[2%]">
+        <div id="block" class="invisible"></div>
+        <div id="hole" class="invisible"></div>
+        <div id="character" class="invisible"><img src="img/bird.png" alt="" height="20px" class="bird"></div>   
     </div>
+  </section>
+
+  <section class="flex pt-[2%] justify-around">
+     <div>
+        <button id="startBTN" class=" bg-zinc-700/25 m-[3%] py-[5%] px-[20%] border-2 border-zinc-700/25 rounded-[25%] text-2xl">Start</button>
+    </div>
+    <div>
+        <span class=" bg-zinc-700/25 m-[3%] py-[5%] px-[10%] border-2 border-zinc-700/25 rounded-[25%] text-2xl">
+            <span>Score:</span><span id="score">0</span>
+        </span>
+    </div>
+  </section>
 </body>
 <script src="script.js"></script>
 </html>
