--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="h-screen bg-slate-600/25">
-  <section class="main ">
+  <section class="main flex ">
     <div id="game" class="rounded-[2%]">
         <div id="block" class="invisible"></div>
         <div id="hole" class="invisible"></div>
         <div id="character" class="invisible"><img src="img/bird.png" alt="" height="20px" class="bird"></div>   
-    </div>
+      </div>
+      <div id="gameover" class="invisible text-3xl font-serif text-red-600/75 animate-pulse">GAME OVER</div>
   </section>
 
   <section class="flex pt-[2%] justify-around">
      <div>
-        <button id="startBTN" class=" bg-zinc-700/25 m-[3%] py-[5%] px-[20%] border-2 border-zinc-700/25 rounded-[25%] text-2xl">Start</button>
+        <button id="startBTN" class=" bg-emerald-600/25 m-[3%] py-[5%] px-[20%] border-2 border-emerald-300/25 rounded-[10%] text-2xl">Start</button>
     </div>
     <div>
-        <span class=" bg-zinc-700/25 m-[3%] py-[5%] px-[10%] border-2 border-zinc-700/25 rounded-[25%] text-2xl">
+        <span id="scoreDetails" class=" bg-lime-500/50 m-[3%] py-[5%] px-[10%] border-2 border-lime-600/25  text-2xl">
             <span>Score:</span><span id="score">0</span>
         </span>
     </div>
