--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen bg-slate-600/25">
+<body class="h-screen ">
   <section class="main flex ">
     <div id="game" class="rounded-[2%]">
         <div id="block" class="invisible"></div>
