--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <div id="gameover" class="invisible text-3xl font-serif text-red-600/75 animate-pulse">GAME OVER</div>
   </section>
 
-  <section class="flex pt-[2%] justify-around">
+  <section class="flex pt-[4%] justify-around">
      <div>
         <button id="startBTN" class=" bg-emerald-600/25 m-[3%] py-[5%] px-[20%] border-2 border-emerald-300/25 rounded-[10%] text-2xl">Start</button>
     </div>
     <div>
-        <span id="scoreDetails" class=" bg-lime-500/50 m-[3%] py-[5%] px-[10%] border-2 border-lime-600/25  text-2xl">
+        <span id="scoreDetails" class=" bg-lime-500/50 m-[3%] my-[5%] py-[5%] px-[10%] border-2 border-lime-600/25  text-2xl">
             <span>Score:</span><span id="score">0</span>
         </span>
     </div>
